# igvc-software

igvc_msgs/: CMakeLists.txt  package.xml
igvc_msgs/action/: PathExecute.action
igvc_msgs/srv/: GeneratePath.srv
igvc_navigation/: CMakeLists.txt  package.xml
igvc_navigation/launch/: follower_test.launch  localization.launch  pather.launch  pather_test.launch  planner_test.launch
igvc_navigation/src/new_path_follower/: CMakeLists.txt  PathExecuteAction.cpp  PathExecuteAction.h  SmoothControl.cpp  main.cpp
igvc_navigation/src/new_path_planner/: CMakeLists.txt  igvcsearchproblemdiscrete.cpp  main.cpp
igvc_navigation/src/pather/: CMakeLists.txt  main.cpp
igvc_navigation/src/waypoint_source/: main.cpp
igvc_platform/src/motor_controller/: main.cpp
